cmd/shared/libgogit.h

extern void GitPullOptionsNew(long long* handleOut);
extern char* GitPullOptionsSetRemoteName(long long handle, char* val);
extern char* GitPullOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPullOptionsSetReferenceName(long long handle, char* val);
extern char* GitPullOptionsSetSingleBranch(long long handle, int val);
extern char* GitPullOptionsSetDepth(long long handle, int val);
extern char* GitPullOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPullOptionsSetForce(long long handle, int val);
extern char* GitPullOptionsSetInsecureSkipTLS(long long handle, int val);
extern void GitPullOptionsFree(long long handle);
extern void GitFetchOptionsNew(long long* handleOut);
extern char* GitFetchOptionsSetRemoteName(long long handle, char* val);
extern char* GitFetchOptionsSetRemoteURL(long long handle, char* val);
extern char* GitFetchOptionsSetDepth(long long handle, int val);
extern char* GitFetchOptionsSetAuth(long long handle, long long authHandle);
extern char* GitFetchOptionsSetTags(long long handle, int val);
extern char* GitFetchOptionsSetForce(long long handle, int val);
extern char* GitFetchOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitFetchOptionsSetPrune(long long handle, int val);
extern void GitFetchOptionsFree(long long handle);
extern void GitPushOptionsNew(long long* handleOut);
extern char* GitPushOptionsSetRemoteName(long long handle, char* val);
extern char* GitPushOptionsSetRemoteURL(long long handle, char* val);
extern char* GitPushOptionsSetAuth(long long handle, long long authHandle);
extern char* GitPushOptionsSetPrune(long long handle, int val);
extern char* GitPushOptionsSetForce(long long handle, int val);
extern char* GitPushOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitPushOptionsSetFollowTags(long long handle, int val);
extern char* GitPushOptionsSetAtomic(long long handle, int val);
extern char* GitPushOptionsSetQuiet(long long handle, int val);
extern void GitPushOptionsFree(long long handle);
extern void GitResetOptionsNew(long long* handleOut);
extern char* GitResetOptionsSetCommit(long long handle, char* val);
extern char* GitResetOptionsSetMode(long long handle, int val);
extern void GitCommitOptionsFree(long long handle);
extern void GitCreateTagOptionsNew(long long* handleOut);
extern char* GitCreateTagOptionsSetMessage(long long handle, char* val);
extern char* GitCreateTagOptionsSetTaggerNameEmail(long long handle, char* name, char* email);
extern void GitCreateTagOptionsFree(long long handle);
extern void GitLogOptionsNew(long long* handleOut);
extern char* GitLogOptionsSetFrom(long long handle, char* val);
extern char* GitLogOptionsSetTo(long long handle, char* val);
extern char* GitLogOptionsSetOrder(long long handle, int val);
extern char* GitLogOptionsSetAll(long long handle, int val);
extern void GitLogOptionsFree(long long handle);
extern void GitPlainOpenOptionsNew(long long* handleOut);
extern char* GitPlainOpenOptionsSetDetectDotGit(long long handle, int val);
extern void GitPlainOpenOptionsFree(long long handle);
extern void GitListOptionsNew(long long* handleOut);
extern char* GitListOptionsSetAuth(long long handle, long long authHandle);
extern char* GitListOptionsSetInsecureSkipTLS(long long handle, int val);
extern char* GitListOptionsSetTimeout(long long handle, int val);
extern void GitListOptionsFree(long long handle);
extern void GitMergeOptionsNew(long long* handleOut);
extern char* GitMergeOptionsSetStrategy(long long handle, int val);
extern void GitMergeOptionsFree(long long handle);